# nokhwa

./: Cargo.toml
examples/capture/: Cargo.toml
examples/capture/src/: main.rs
examples/decoder_test/: Cargo.toml
examples/setting/: Cargo.toml
examples/setting/src/: main.rs
examples/threaded-capture/: Cargo.toml
nokhwa-bindings-linux/src/: lib.rs
nokhwa-bindings-macos/: Cargo.toml
nokhwa-bindings-windows/: Cargo.toml
nokhwa-core/: Cargo.toml
nokhwa-core/src/: types.rs
src/: camera.rs  lib.rs  threaded.rs
