[package]
name = "nokhwactl"
version = "0.10.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>", "The Nokhwa Contributors"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["nokhwa/default"]

[dependencies]
flume = "0.11"
once_cell = "1.18"
color-eyre = "0.6"

[dependencies.ggez]
version = "0.9"
default-features = false

[dependencies.clap]
version = "4.4"
features = ["derive"]

# Use these as you need
[dependencies.nokhwa]
path = "../../../nokhwa"
features = ["input-native", "output-threaded"]

[dependencies.image]
version = "0.24"
features = ["png"]
